--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "version": "3.0.141",
   "author": "Taylor Bryant <taylor@bryant.io>",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
+    "animejs": "^3.1.0",
     "gatsby": "2.18.7",
     "gatsby-plugin-manifest": "2.2.31",
     "gatsby-plugin-offline": "3.0.27",
@@ -13,10 +17,13 @@
     "gatsby-source-filesystem": "^2.1.42",
     "gatsby-transformer-remark": "^2.6.42",
     "graphql": "14.5.8",
+    "imagesloaded": "^4.1.4",
     "prop-types": "15.7.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-helmet": "5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-scrollmonitor": "^0.1.0",
+    "scrollmonitor": "^1.2.4"
   },
   "keywords": [
     "gatsby",
