--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "gatsby-transformer-remark": "^2.6.42",
     "graphql": "14.5.8",
     "imagesloaded": "^4.1.4",
+    "p5": "^0.10.2",
     "prop-types": "15.7.2",
+    "rc-slider": "^8.7.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-helmet": "^5.2.1",
+    "react-p5-wrapper": "^2.0.0",
     "react-scrollmonitor": "^0.1.0",
     "scrollmonitor": "^1.2.4"
   },
