--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "repository": "#",
   "license": "UNLICENSED",
+  "engines": {
+    "node": "24.x"
+  },
   "scripts": {
     "build": "webpack --config ./bundler/webpack.prod.js",
     "dev": "webpack serve --config ./bundler/webpack.dev.js"
@@ -8,6 +11,8 @@
   "dependencies": {
     "@babel/core": "^7.17.10",
     "@babel/preset-env": "^7.17.10",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
@@ -15,6 +20,7 @@
     "glslify-loader": "^2.0.0",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
+    "marked": "^17.0.1",
     "mini-css-extract-plugin": "^2.6.0",
     "portfinder-sync": "0.0.2",
     "raw-loader": "^4.0.2",
