--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "glslify-loader": "^2.0.0",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
+    "lucide": "^0.562.0",
     "marked": "^17.0.1",
     "mini-css-extract-plugin": "^2.6.0",
     "portfinder-sync": "0.0.2",
